# XClip

./: .gitignore  CMakeLists.txt  README.md
resources/: gen_icon.ps1  resource.h  xclip.manifest  xclip.rc
src/: app.cpp  app.h  clipboard.cpp  clipboard.h  config_dialog.cpp  config_dialog.h  history.cpp  history.h  hotkey.cpp  hotkey.h  main.cpp  notes.cpp  notes.h  popup.cpp  popup.h  search_dialog.cpp  search_dialog.h  settings.cpp  settings.h  tray.cpp  tray.h  utils.cpp  utils.h
